# exercism.bak

./: README.md  justfile
c/all-your-base/: all_your_base.c  all_your_base.h
c/anagram/: anagram.c
c/armstrong-numbers/: armstrong_numbers.c
c/binary-search/: binary_search.c
c/bob/: bob.c  bob.h
c/circular-buffer/: circular_buffer.c
c/clock/: clock.c
c/collatz-conjecture/: collatz_conjecture.c
c/darts/: darts.c
c/difference-of-squares/: difference_of_squares.c
c/dnd-character/: dnd_character.c
c/eliuds-eggs/: eliuds_eggs.c
c/grains/: grains.c
c/hamming/: hamming.c
c/high-scores/: high_scores.c
c/kindergarten-garden/: kindergarten_garden.c  kindergarten_garden.h
c/meetup/: meetup.c
c/minesweeper/: minesweeper.c  minesweeper.h
c/queen-attack/: queen_attack.c  queen_attack.h
c/resistor-color/: resistor_color.c  resistor_color.h
c/resistor-color-duo/: resistor_color_duo.c  resistor_color_duo.h
c/reverse-string/: reverse_string.c
c/rna-transcription/: rna_transcription.c
c/robot-simulator/: robot_simulator.c
c/roman-numerals/: roman_numerals.c
c/rotational-cipher/: rotational_cipher.c
c/run-length-encoding/: run_length_encoding.c
c/scrabble-score/: scrabble_score.c
c/sieve/: sieve.c
c/space-age/: space_age.c
c/spiral-matrix/: spiral_matrix.c  spiral_matrix.h
c/wordy/: wordy.c
c/zebra-puzzle/: domain.c  domain.h  inference.c  solver.h  utils.c  (+2 more)
rust/sum-of-multiples/_iterations/5/: Cargo.toml
rust/sum-of-multiples/_iterations/5/benches/: sum_of_multiples_bench.rs
rust/sum-of-multiples/_iterations/5/src/: lib.rs
(+2188 files in other folders)
