[package]
edition = "2021"
name = "sum-of-multiples"
version = "1.5.0"

[dependencies]
either = "1"

# The following is required to run the benchmark.
# It's commented-out because tests time out on Exercism if we leave them there,
# because compiling `criterion` takes too long.

# [dev-dependencies]
# criterion = "0.5"

# [[bench]]
# name = "sum_of_multiples_bench"
# harness = false
